--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: #3f3b00;
+  --bg-color: #3f1e00;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
-  --accent-color: #71773dfa;
+  --accent-color: #3f773dfa;
   --header-shadow: #000 0px 0px 5px;
 }
 
